@@ -3,57 +3,66 @@
 #include <Adafruit_GFX.h>
 #include <Adafruit_SSD1306.h>
 #include <stdio.h>
-
-#define PI_BYTES 3
-#define DEBUG 0
-
+ 
+#define PI_BYTES 5
+#define DEBUG 1
+ 
 #define RX 2
 #define TX 3
-
+ 
 #define OLED_I2C_ADDR 0x3C
 #define OLED_RESET 4 
 #define OLED_WIDTH 128 
 #define OLED_HEIGHT 64 
-
+ 
 // object instantiation
-
+ 
 SoftwareSerial pi(RX, TX);
 Adafruit_SSD1306 screen(OLED_WIDTH, OLED_HEIGHT, &Wire, OLED_RESET);
-
+ 
 void displaySysInfo (uint8_t *sysInfo){
-  
+   
   char cpu[16], mem[16], cTemp[16];
-    
+     
   sprintf(cpu, "CPU:  %d%%    ", sysInfo[0]);
   sprintf(mem, "RAM:  %d%%    ", sysInfo[1]);
   sprintf(cTemp, "TEMP: %d F  ", sysInfo[2]);
-
+ 
   screen.clearDisplay();
-
+ 
   /* CPU percent */
-  
+   
   screen.setCursor(0, 0);
-  
+   
   screen.print(F("CPU %: "));
   screen.print(sysInfo[0]);
-
+ 
   /* Memory percent */
-  
+   
   screen.setCursor(0, 16);
-  
+   
   screen.print(F("RAM %: "));
   screen.print(sysInfo[1]);
-
+ 
   /* CPU temperature */
-  
+   
   screen.setCursor(0, 32);
-  
+   
   screen.print(F("TMP F: "));
   screen.print(sysInfo[2]);
 
+  uint16_t testNum = (sysInfo[3] << 8 ) | (sysInfo[4] & 0xff);
+
+  if (testNum != 65535){    
+    // we got a -1 return
+    screen.setCursor(0, 48);
+    screen.print(F("TEST#: "));
+    screen.print(testNum);
+  }
+  
   screen.display();
 }
-
+ 
 void serialPrintSysInfo(uint8_t *sysInfo){
   Serial.println(F("System Info"));
   Serial.print(F("CPU:  "));
@@ -64,47 +73,58 @@ void serialPrintSysInfo(uint8_t *sysInfo){
   Serial.println(F("%"));
   Serial.print(F("TEMP: "));
   Serial.print(sysInfo[2]);
-  Serial.println(F("F\n"));  
-}
+  Serial.println(F("F\n"));
 
+  uint16_t testNum = (sysInfo[3] << 8 ) | (sysInfo[4] & 0xff);
+  
+  Serial.print(F("TEST: "));
+  Serial.println(testNum);
+
+}
+ 
 void setup() {
   Serial.begin(9600);
-
+ 
   // Pi comms setup
-  
-  pi.begin(9600);
-
+   
+  pi.begin(115200);
+ 
   // OLED display setup
-  
+   
   if(!screen.begin(SSD1306_SWITCHCAPVCC, OLED_I2C_ADDR)) {
     Serial.println(F("I2C OLED attach failure..."));
     for(;;);
   }
-
+ 
   screen.clearDisplay();
-
+ 
   screen.setTextSize(2);
   screen.setTextColor(WHITE);
   screen.setCursor(0, 0);
 }
-
+ 
 void processData (void){
-  
+   
   uint8_t sysInfo[PI_BYTES];
-  
+   
   if (pi.available() == PI_BYTES){
-    for (uint8_t i=0; i<3; i++){
+    for (uint8_t i=0; i<PI_BYTES; i++){
       sysInfo[i] = pi.read();
+      Serial.print(i);
+      Serial.print(" : ");
+      Serial.println(sysInfo[i]);
     }
-
+ 
     if (DEBUG){
       serialPrintSysInfo(sysInfo);
     }
-    
+     
     displaySysInfo(sysInfo);
   }
 }
-
+ 
 void loop() {
   processData();
 }
+
+
