@@ -15,6 +15,8 @@ Revision history for Perl extension RPi::WiringPi.
           test suite (as t/112 (good) and t/113 (die)) (closes #132)
         - added SIGINT multi test files
         - added meta_locks(). Manages shared memory lock section
+        - serial Arduino OLED display now displays the current test file number
+          (closes #106)
 
 2.3633_01 2019-07-05
         - added the test platform I2C address map listing (closes #103)
